--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.14",
     "@next/font": "13.1.4",
+    "@plaiceholder/next": "^2.5.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -21,6 +22,7 @@
     "next": "13.1.4",
     "next-sitemap": "^3.1.48",
     "next-themes": "^0.2.1",
+    "plaiceholder": "^2.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.31.3",
